<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateDatabase">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/table_name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterTableName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/edit"
                        android:hint="@string/enter_table_name"
                        android:padding="10dp"
                        android:inputType="textCapWords"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/columnsText"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:id="@+id/root_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="2dp">

                    </LinearLayout>

                    <Button
                        android:id="@+id/addColumnButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/round_button"
                        android:drawableEnd="@drawable/ic_add"
                        android:text="Add column" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal">-->

<!--                    <EditText-->
<!--                        android:id="@+id/enterPrimaryKey"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        android:background="@drawable/edit"-->
<!--                        android:elevation="3dp"-->
<!--                        android:hint="@string/enter_primary_key"-->
<!--                        android:padding="10dp"-->
<!--                        android:layout_margin="6dp"-->
<!--                        android:layout_weight="4"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/enterDatabaseName" />-->

<!--                    <FrameLayout-->
<!--                        android:layout_width="60dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        android:layout_weight="1"-->
<!--                        android:layout_margin="6dp"-->
<!--                        android:elevation="3dp"-->
<!--                        android:background="@drawable/spinner">-->

<!--                        <Spinner-->
<!--                            android:id="@+id/spinner_type"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"/>-->

<!--                    </FrameLayout>-->

<!--                    <ImageView-->
<!--                        android:id="@+id/image_remove"-->
<!--                        android:layout_width="25dp"-->
<!--                        android:layout_height="25dp"-->
<!--                        android:src="@drawable/ic_baseline_close_24"-->
<!--                        app:tint="@color/black"-->
<!--                        android:layout_gravity="center" />-->
<!--                </LinearLayout>-->



        </LinearLayout>

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:text="Create"
            android:background="@drawable/very_round_button"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="30dp"/>

    </RelativeLayout>



</layout>
